--- a/Index.html
+++ b/Index.html
@@ -11,6 +11,7 @@
   .loader-bar { width: 0; height: 20px; background: #007BFF; }
   #unlockBtn { padding: 10px 20px; font-size: 16px; background: #28a745; color: white; border: none; cursor: pointer; display: none; border-radius: 5px; margin-top: 20px; }
 </style>
+<meta name="ppck-ver" content="cbdd2d61906cc069157ce1b47c40a8d1" />
 </head>
 <body>
 
