--- a/Index.html
+++ b/Index.html
@@ -3,15 +3,19 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Unlock Content Prototype</title>
+
+<!-- PopCash verification meta tag -->
+<meta name="ppck-ver" content="cbdd2d61906cc069157ce1b47c40a8d1" />
+
+<title>Unlock Exclusive Content</title>
+
 <style>
   body { font-family: Arial, sans-serif; text-align: center; padding: 50px; background: #f5f5f5; }
   h1 { color: #333; }
   .loader-container { width: 300px; margin: 50px auto; background: #ddd; border-radius: 25px; overflow: hidden; }
-  .loader-bar { width: 0; height: 20px; background: #007BFF; }
+  .loader-bar { width: 0; height: 20px; background: #007BFF; transition: width 0.3s; }
   #unlockBtn { padding: 10px 20px; font-size: 16px; background: #28a745; color: white; border: none; cursor: pointer; display: none; border-radius: 5px; margin-top: 20px; }
 </style>
-<meta name="ppck-ver" content="cbdd2d61906cc069157ce1b47c40a8d1" />
 </head>
 <body>
 
@@ -25,26 +29,52 @@
 
 <p id="message"></p>
 
+<!-- GG Smartlink script -->
+<script type="text/javascript" src="https://qvxprml.one/cl/648da0395cce0fe4"></script>
+
+<!-- Adsterra placeholder script -->
 <script>
-  // Fake loading bar animation
+  (function(){
+    var s = document.createElement('script');
+    s.src = 'https://droppinglevelspacious.com/u6wzr7in?key=f46f30f4769645e946156626d8eaeadc';
+    s.async = true;
+    document.body.appendChild(s);
+  })();
+</script>
+
+<!-- HilltopAds placeholder script -->
+<script>
+  (function(){
+    var s = document.createElement('script');
+    s.src = 'https://frail-benefit.com/Vanpfk';
+    s.async = true;
+    document.body.appendChild(s);
+  })();
+</script>
+
+<!-- Fake loading bar + unlock button -->
+<script>
   const loader = document.getElementById('loaderBar');
   let width = 0;
   let interval = setInterval(() => {
     width += 1;
     loader.style.width = width + '%';
-    if(width >= 100) {
+    if(width >= 100){
       clearInterval(interval);
       document.getElementById('unlockBtn').style.display = 'inline-block';
       document.getElementById('message').innerText = 'Click the button to unlock your content!';
     }
-  }, 30); // 30ms x 100 = ~3 seconds
+  }, 30); // ~3 seconds
 
-  // Placeholder for Smartlink trigger
+  // Unlock button triggers Smartlink (placeholder)
   document.getElementById('unlockBtn').addEventListener('click', () => {
-    alert('Smartlink would trigger here, redirecting to your content...');
-    // window.location.href = "https://your-GG-Smartlink-or-download-page.com";
+    alert('Smartlink would trigger here. PopCash script will also run in background once inserted.');
+    // When ready, replace alert with: window.location.href = "https://qvxprml.one/cl/648da0395cce0fe4";
   });
 </script>
+
+<!-- PopCash script placeholder -->
+<!-- Replace this comment with the real PopCash script once you get it -->
 
 </body>
 </html>
